force-app/main/default/objects/Transaction__c.object
<CustomObject>
    <description>To keep track of all the transactions performed between the contacts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Place or store where be performed the transaction</description>
        <inlineHelpText>Place or store where be performed the transaction</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The amount of the transation</description>
        <inlineHelpText>The amount of the transation</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_to__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>To who will be billed the transaction.</description>
        <inlineHelpText>To who will be billed the transaction.</inlineHelpText>
        <label>Billed to</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions (Billed to)</relationshipLabel>
        <relationshipName>Billed_to</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The category of the transaction</description>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date of the transaction</description>
        <inlineHelpText>Date of the transaction</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A detail about the expense</description>
        <inlineHelpText>A detail about the expense</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Use if the transaction is related to a special event.</description>
        <inlineHelpText>Use if the transaction is related to a special event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>It_is_debt__c</fullName>
        <formula>Billed_to__c !=  Paid_By__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>It is debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_By__c</fullName>
        <description>To specify who paid the transaction.</description>
        <inlineHelpText>To specify who paid the transaction.</inlineHelpText>
        <label>Paid By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Paid_by</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Amount__c</columns>
        <columns>Paid_By__c</columns>
        <columns>Billed_to__c</columns>
        <columns>Date__c</columns>
        <columns>Description__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>