force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Amount__c</columns>
    <columns>Paid_By__c</columns>
    <columns>Billed_to__c</columns>
    <columns>Date__c</columns>
    <columns>Description__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>